Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49598

qdoc: Incorrect alphabetical ordering of class/QML type lists

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.0 RC
    • 5.6.0 Alpha
    • Build tools: qdoc
    • None
    • 7915889c (qttools)

      http://doc-snapshots.qt.io/qt5-5.6/classes.html#h :

          QHBoxLayout
          QHash
          ...
      

      -> alphabetical ordering should be case-insensitive.

        For Gerrit Dashboard: QTBUG-49598
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes