qdoc: Fix alphabetical ordering of C++ class/QML type lists

To have the classes and types be listed in the correct alphabetical
order, use lowercase keys for the QMultiMap's when storing each type.

Change-Id: I11488eadf0d19a8066d3306d761f3f7b7e9e3ed1
Task-number: QTBUG-49598
Reviewed-by: Martin Smith <martin.smith@theqtcompany.com>